# competitive-programming-daily-bot

./: .env.example  .gitignore  LICENSE  README.md  bot.py  config.toml.example  leetcode.py  pyproject.toml
cogs/: core_cog.py  interaction_handler_cog.py  schedule_manager_cog.py  slash_commands_cog.py
data/: migrate_settings.sql
llms/: __init__.py  base.py  gemini.py  templates.md  templates.py
tests/: README.md  test_interaction_handler.py  test_monthly_fetch.py  test_platform_clients.py
utils/: __init__.py  config.py  database.py  logger.py
